# CHIP8-Emulator

./: CMakeLists.txt  LICENSE  main.cpp  readMe.md
include/: chip8.h
